--- a/src/app/supplier/supplier.component.html
+++ b/src/app/supplier/supplier.component.html
@@ -51,3 +51,36 @@
 
 
 -->
+
+
+
+<GridLayout>
+    <ListView [items]="newsItems" class="list-group" [itemTemplateSelector]="templateSelector">
+        <ng-template nsTemplateKey="big" let-item="item">
+            <GridLayout class="list-group-item">
+                <Image [src]="item.imageUrl" stretch="aspectFit" height="200"></Image>
+
+                <Label [text]="item.title" class="big-header"></Label>
+            </GridLayout>
+        </ng-template>
+
+        <ng-template nsTemplateKey="small" let-item="item">
+            <GridLayout columns="auto *" rows="30 auto" class="list-group-item">
+                <Image [src]="item.imageUrl" stretch="aspectFill" row="0" col="0" rowSpan="2" width="100" height="100" class="thumb img-circle"></Image>
+
+                <Label row="0" col="1" [text]="item.title" class="list-group-heading"></Label>
+                <Label row="1" col="1" [text]="item.text" class="list-group-item-text" textWrap="true"></Label>
+            </GridLayout>
+        </ng-template>
+
+        <ng-template nsTemplateKey="small-no-image" let-item="item">
+            <StackLayout class="list-group-item">
+                <Label row="0" col="1" [text]="item.title" class="list-group-heading"></Label>
+                <Label row="1" col="1" [text]="item.text" class="list-group-item-text" textWrap="true"></Label>
+            </StackLayout>
+        </ng-template>
+    </ListView>
+
+    <Button [text]="isProfiling ? 'stop profiling' : 'start profiling'" (tap)="toggleProfiling()" verticalAlignment="bottom" margin="0 20"></Button>
+
+</GridLayout>
