--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,12 +1,20 @@
-<StackLayout orientation="vertical" borderColor="silver" borderWidth="2">
-    <Image src="res://icon-76" stretch="none" horizontalAlignment="center"></Image>
-    <TextField [(ngModel)]="user.email" hint="Email Address" keyboardType="email" autocorrect="false" autocapitalizationType="none"></TextField>
-    <TextField [(ngModel)]="user.password" hint="Password" secure="true"></TextField>
-    <Button class="submit-button fas" text="Iniciar Sessión &#xf138;" (tap)="submit()">
-    </Button>
+<StackLayout class="contenedorLogin" orientation="vertical">
+    <StackLayout class="header_stackLayout" orientation="vertical">
+        <Image src="res://icon-76" stretch="none" horizontalAlignment="center"></Image>
 
-    <Button text="¿Olvidate tu contraseña?" (tap)="forgotPassword()"></Button>
-    <Button class="new-Account-button far" text="Crear cuenta nueva &#xf007;" (tap)="newAccount()"></Button>
+    </StackLayout>
 
+    <StackLayout class="class_StackLayout" orientation="vertical">
+
+        <TextField [(ngModel)]="user.email" hint="Email Address" keyboardType="email" autocorrect="false" autocapitalizationType="none"></TextField>
+        <TextField [(ngModel)]="user.password" hint="Password" secure="true"></TextField>
+        <Button class="submit-button fas" text="Iniciar Sessión &#xf138;" (tap)="submit()">
+                </Button>
+
+        <Button text="¿Olvidate tu contraseña?" (tap)="forgotPassword()"></Button>
+        <Button class="new-Account-button far" text="Crear cuenta nueva &#xf007;" (tap)="newAccount()"></Button>
+
+
+    </StackLayout>
 
 </StackLayout>
