--- a/src/app/supplier/supplier.component.html
+++ b/src/app/supplier/supplier.component.html
@@ -66,7 +66,7 @@
         </ng-template>
 
         <ng-template nsTemplateKey="small" let-item="item">
-            <GridLayout columns="100, 125, *" rows="30, auto,*" style="background-color: rgb(216, 212, 212);" class="list-group-item">
+            <GridLayout [nsRouterLink]="['/supplierDetail', item.id]" columns="100, 125, *" rows="30, auto,*" style="background-color: rgb(216, 212, 212);" class="list-group-item">
                 <Image width="100" height="100" style=" margin: 0%;" [src]="item.imageUrl" row="0" col="0" rowSpan="2" class="thumb img-circle img-border"></Image>
 
                 <Label class="fas fa-star" row="0" col="1" text="&#xf005; &#xf005; &#xf005; &#xf005; &#xf005;" style="color:goldenrod ;margin: 0%;font-size: xx-large;"></Label>
